@@ -27,7 +27,7 @@
 #include "log.h"
 
 
-NS_LOG_COMPONENT_DEFINE ("SystemMutex");
+NS_LOG_COMPONENT_DEFINE_MASK ("SystemMutex", ns3::LOG_PREFIX_TIME);
 
 namespace ns3 {
 
